--- a/Front-End Web UI Frameworks and Tools/Main/conFusion/index.html
+++ b/Front-End Web UI Frameworks and Tools/Main/conFusion/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ristorante Con Fusion</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 </head>
-
 <body>
-
-    <header>
-
+    <header class="jumbotron">
         <!-- Main component for a primary marketing message or call to action -->
-
-        <div>
-            <div>
+        <div class="container">
+            <div class="row">
                 <div>
                     <h1>Ristorante con Fusion</h1>
                     <p style="padding:40px;"></p>
@@ -24,8 +24,8 @@
         </div>
     </header>
 
-    <div>
-        <div>
+    <div class="container">
+        <div class="row">
             <div>
                 <p style="padding:20px;"></p>
                 <h3 align=center>Our Lipsmacking Culinary Creations</h3>
@@ -38,7 +38,7 @@
         </div>
 
 
-        <div>
+        <div class="row">
             <div>
                 <p style="padding:20px;"></p>
                 <h3 align=center>This Month's Promotions</h3>
@@ -50,7 +50,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="row">
             <div>
                 <p style="padding:20px;"></p>
                 <h3 align=center>Meet our Culinary Specialists</h3>
@@ -65,8 +65,8 @@
     </div>
 
     <footer>
-        <div>
-            <div>             
+        <div class="container">
+            <div class="row">             
                 <div>
                     <h5>Links</h5>
                     <ul>
@@ -104,7 +104,7 @@
             </div>
         </div>
     </footer>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 </body>
-
 </html>
