--- a/Front-End Web UI Frameworks and Tools/Homework 1/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 1/index.html
@@ -27,8 +27,8 @@
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#"><span class="glyphicon glyphicon-home"
-                         aria-hidden="true"></span>Home</a></li>
-                    <li><a href="#">About</a></li>
+                         aria-hidden="true"></span> Home</a></li>
+                    <li><a href="Ristorante%20Con%20Fusion:%20About%20Us.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
                          role="button" aria-haspopup="true" aria-expanded="false">
