--- a/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en"><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-     <meta charset="utf-8">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head 
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: About Us</title>
-        <!-- Bootstrap -->
-    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap.css" rel="stylesheet">
-    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap-theme.css" rel="stylesheet">
-    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/font-awesome.css" rel="stylesheet">
-    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap-social.css" rel="stylesheet">
-    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/mystyles.css" rel="stylesheet">
-
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="css/font-awesome.min.css" rel="stylesheet">
+    <link href="css/bootstrap-social.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -32,12 +31,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                <a class="navbar-brand" href="index.html">Ristorante Con Fusion</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="#"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
+                    <li class="active"><a href="#"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                          Menu <span class="caret"></span></a>
