--- a/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
@@ -78,7 +78,10 @@ creations will tickle your culinary senses!</p>
     <div>
         <div>
             <div>
-                Breadcrumbs go here
+                <ol class="breadcrumb">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ol>
             </div>
             <div>
                <h3>About Us</h3>
