--- a/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
@@ -75,22 +75,22 @@ creations will tickle your culinary senses!</p>
         </div>
     </header>
 
-    <div>
-        <div>
-            <div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">About Us</a></li>
                 </ol>
             </div>
-            <div>
+            <div class="col-xs-12">
                <h3>About Us</h3>
                <hr>
             </div>
         </div>
         
-        <div>
-            <div>
+        <div class="row row-content">
+            <div class="col-xs-9">
                 <h2>Our History</h2>
                 <p>Started in 2010, Ristorante con Fusion quickly 
 established itself as a culinary icon par excellence in Hong Kong. With 
@@ -100,14 +100,14 @@ four of the best three-star Michelin chefs in the world, you never know
 what will arrive on your plate the next time you visit us.</p>
                 <p>The restaurant traces its humble beginnings to <em>The Frying Pan</em>, a successful chain started by our CEO, Mr. Peter Pan, that featured for the first time the world's best cuisines in a pan.</p>
             </div>
-            <div>
+            <div class="col-xs-9">
                 <p style="padding:20px;"></p>
             </div>
         </div>
 
 
-        <div>
-            <div>
+        <div class="row row-content">
+            <div class="col-xs-9">
                 <h2>Corporate Leadership</h2>
                 <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
                 <p>Our CEO, Peter, credits his hardworking East Asian 
@@ -133,7 +133,7 @@ International experience having worked closely with whos-who in the
 culinary world, he specializes in creating mouthwatering Indo-Italian 
 fusion experiences. He says, <em>Put together the cuisines from the two craziest cultures, and you get a winning hit! Amma Mia!</em></p>
             </div>
-             <div>
+             <div col-xs-12>
                 <p style="padding:20px;"></p>
             </div>
        </div>
