--- a/Front-End Web UI Frameworks and Tools/Homework 1/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 1/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ristorante Con Fusion</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/bootstrap-social.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap-theme.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/font-awesome.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap-social.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/mystyles.css" rel="stylesheet">
     
 </head>
 <body>
