--- a/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 1/Ristorante Con Fusion: About Us.html
@@ -8,11 +8,11 @@
          content must come *after* these tags -->
     <title>Ristorante Con Fusion: About Us</title>
     <!-- Bootstrap -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <link href="css/bootstrap-social.css" rel="stylesheet">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap-theme.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/font-awesome.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap-social.css" rel="stylesheet">
+    <link href="Ristorante%20Con%20Fusion:%20About%20Us_files/mystyles.css" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
