Изменил ссылку на источник изображения.

--- a/HTML, CSS and JavaScript/Homework 3/part3.html
+++ b/HTML, CSS and JavaScript/Homework 3/part3.html
@@ -42,7 +42,7 @@
                 var img = document.createElement("img");
                 var positionTop = Math.floor(Math.random() * 400);
                 var positionLeft = Math.floor(Math.random() * 400);
-                img.src = "smile.png";
+                img.src = "http://home.cse.ust.hk/~rossiter/mooc/matching_game/smile.png";
                 img.style.top = positionTop +"px";
                 img.style.left = positionLeft + "px";
                 theLeftSide.appendChild(img);
