--- a/Front-End Web UI Frameworks and Tools/Main/Week 2/aboutus.html
+++ b/Front-End Web UI Frameworks and Tools/Main/Week 2/aboutus.html
@@ -38,7 +38,7 @@
                     <li><a href="index.html"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
                     <li class="active"><a href="#"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span> About</a></li>
                     <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon-list-alt" aria-hidden="true"></span>
                          Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Appetizers</a></li>
@@ -51,7 +51,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a href="contactus.html"><span class="fa-envelope-o"></span> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -80,7 +80,7 @@ creations will tickle your culinary senses!</p>
             <div class="col-xs-12">
                 <ol class="breadcrumb">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">About Us</a></li>
+                    <li class="active">About Us</li>
                 </ol>
             </div>
             <div class="col-xs-12">
@@ -182,9 +182,9 @@ fusion experiences. He says, <em>Put together the cuisines from the two craziest
         </div>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="Ristorante%20Con%20Fusion:%20About%20Us_files/jquery.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="Ristorante%20Con%20Fusion:%20About%20Us_files/bootstrap.js"></script>
+    <script src="js/bootstrap.min.js"></script>
 
 
 </body></html>
