--- a/Front-End Web UI Frameworks and Tools/Main/Week 2/index.html
+++ b/Front-End Web UI Frameworks and Tools/Main/Week 2/index.html
@@ -28,10 +28,10 @@
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="#"><span class="glyphicon glyphicon-home"
                          aria-hidden="true"></span>Home</a></li>
-                    <li><a href="aboutus.html">About</a></li>
+                    <li><a href="aboutus.html"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>About</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                         role="button" aria-haspopup="true" aria-expanded="false">
+                         role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon-list-alt" aria-hidden="true"></span>
                          Menu <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Appetizers</a></li>
@@ -44,7 +44,7 @@
                             <li><a href="#">Weekend Brunch</a></li>
                         </ul>
                     </li>
-                    <li><a href="contactus.html">Contact</a></li>
+                    <li><a href="contactus.html"><span class="fa-envelope-o"></span> Contact</a></li>
                 </ul>
             </div>
         </div>
@@ -111,9 +111,9 @@
                     <h5>Links</h5>
                     <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
+                        <li><a href="aboutus.html">About</a></li>
                         <li><a href="#">Menu</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="contactus.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-xs-12 col-sm-5">
