--- a/Front-End Web UI Frameworks and Tools/Homework 2/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 2/index.html
@@ -74,6 +74,10 @@
                     <p style="padding:20px;"></p>
                     <img src="img/logo.png" class="img-responsive">
                 </div>
+                <div class="col-xs-12 col-sm-2">
+                    <p style="padding:40px;"></p>
+                    <a href="#reserve" class="btn btn-warning" style="width: 140px;">Reserve Table</a> 
+                </div>
             </div>
         </div>
     </header>
