--- a/Front-End Web UI Frameworks and Tools/Homework 2/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 2/index.html
@@ -47,16 +47,20 @@
                     <li><a href="contactus.html"><span class="fa-envelope-o"></span> Contact</a></li>
                 </ul>
                 <form class="navbar-form navbar-right" role="form">
-                    <div class="form-grpup">
-                            <input type="text" class="form-control" id="email" name="email" placeholder="Email">
-                            <input type="text" class="form-control" id="password" name="password" placeholder="Password">
-                            <div class="checkbox">
-                                <label for="remember">
-                                    <input type="checkbox" id="remember" name="remember">Remember me
-                                </label>
-                            </div>
-                            <button class="btn btn-info" type="submit">Sign in</button>
+                    <div class="form-group">
+                        <label class="sr-only" for="email">Email address</label>
+                        <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+                    </div>    
+                    <div class="form-group">    
+                        <label class="sr-only" for="password">Password</label>
+                        <input type="text" class="form-control" id="password" name="password" placeholder="Password">
                     </div>
+                    <div class="checkbox">
+                        <label for="remember" style="color:white;">
+                            <input type="checkbox" id="remember" name="remember">Remember me
+                        </label>
+                    </div>
+                    <button class="btn btn-info" type="submit">Sign in</button>
                 </form>
             </div>
         </div>
@@ -146,6 +150,49 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div id="reserve" class="row row-content">
+            <div class="col-xs-12 col-sm-3">
+                <p style="padding:20px;"></p>
+                <h3 align="center">Reserve a Table</h3>
+            </div>
+            <div class="col-xs-12 col-sm-9">
+                <form class="fonm-horizontal" role="form">
+                    <div class="form-group" style="display:flex;">
+                        <label for="guests" class="col-sm-2 control-label">Number of Guests</label>
+                        <div class="col-sm-10">
+                            <label class="radio-inline"><input type="radio" name="guests" value="1"> 1</label>
+                            <label class="radio-inline"><input type="radio" name="guests" value="2"> 2</label>
+                            <label class="radio-inline"><input type="radio" name="guests" value="3"> 3</label>
+                            <label class="radio-inline"><input type="radio" name="guests" value="4"> 4</label>
+                            <label class="radio-inline"><input type="radio" name="guests" value="5"> 5</label>
+                            <label class="radio-inline"><input type="radio" name="guests" value="6"> 6</label>
+                        </div>
+                    </div>
+                    <div class="form-group" style="display:flex;">
+                        <label for="" class="col-sm-2 control-label">Date and Time</label> 
+                        <div class="col-sm-3">
+                            <input id="date" class="form-control" name="date" placeholder="Date" type="text">
+                            <span class="glyphicon glyphicon-calendar form-control-feedback" style="padding-right:45px;"></span>
+                        </div> 
+                        <div class="col-sm-3 col-sm-offset-1">
+                            <input id="time" class="form-control" name="time" placeholder="Time" type="text">
+                            <span class="glyphicon glyphicon-time form-control-feedback" style="padding-right:45px;"></span>
+                        </div>   
+                    </div>
+                    <div class="form-group" style="display:flex;">
+                        <div class="col-sm-offset-2 col-sm-10">
+                            <button class="btn btn-primary" type="submit">Reserve</button>
+                        </div>
+                    </div>
+                    <div class="alert alert-warning alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <strong>Warning</strong>: Please <a href="+85212345678" class="alert-link">call</a> us to reserve for more than six guests.
+                    </div>
+                </form>    
+            </div>   
         </div>
     </div>
 
