--- a/Front-End Web UI Frameworks and Tools/Homework 2/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 2/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a href="#reserve" class="btn btn-warning" style="width: 140px;">Reserve Table</a> 
+                    <a href="#reserve" class="btn btn-warning btn-block">Reserve Table</a> 
                 </div>
             </div>
         </div>
