--- a/Front-End Web UI Frameworks and Tools/Main/Week 3/index.html
+++ b/Front-End Web UI Frameworks and Tools/Main/Week 3/index.html
@@ -46,25 +46,44 @@
                     </li>
                     <li><a href="contactus.html"><span class="fa-envelope-o"></span> Contact</a></li>
                 </ul>
-                <form class="navbar-form navbar-right" role="form">
-                    <div class="form-group">
-                        <label class="sr-only" for="email">Email address</label>
-                        <input type="text" class="form-control" id="email" name="email" placeholder="Email">
-                    </div>    
-                    <div class="form-group">    
-                        <label class="sr-only" for="password">Password</label>
-                        <input type="text" class="form-control" id="password" name="password" placeholder="Password">
-                    </div>
-                    <div class="checkbox">
-                        <label for="remember" style="color:white;">
-                            <input type="checkbox" id="remember" name="remember">Remember me
-                        </label>
-                    </div>
-                    <button class="btn btn-info" type="submit">Sign in</button>
-                </form>
-            </div>
-        </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a data-toggle="modal" data-target="#loginModal">
+                    <span class="glyphicon glyphicon-log-in"></span> Login</a>
+                    </li>
+                </ul>
+            </div><!---- End #navbar ---->
+        </div><!--- End .container ---->
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Login </h4>
+                </div>
+                <div class="modal-body">
+                    <form class="form-inline" role="form">
+                        <div class="form-group">
+                            <label class="sr-only" for="email">Email address</label>
+                            <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+                        </div>    
+                        <div class="form-group">    
+                            <label class="sr-only" for="password">Password</label>
+                            <input type="text" class="form-control" id="password" name="password" placeholder="Password">
+                        </div>
+                        <div class="checkbox">
+                            <label for="remember">
+                                <input type="checkbox" id="remember" name="remember">Remember me
+                            </label>
+                        </div>
+                        <button class="btn btn-info btn-sm" type="submit">Sign in</button>
+                        <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel</button>
+                    </form>
+                </div><!---- End .modal-body --->
+            </div><!-- End .modal-content -->
+        </div><!--- End .modal-dialog ---->
+    </div><!--- End .modal ---->
     <header class="jumbotron">
         <!-- Main component for a primary marketing message or call to action -->
         <div class="container">
@@ -80,7 +99,9 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a href="#reserve" class="btn btn-warning btn-block">Reserve Table</a> 
+                    <a type="button" class="btn btn-warning btn-block"
+                    data-toggle="tooltip" title="Or Call us at +852 12345678"
+                     data-placement="bottom" href="#reserveform">Reserve Table</a> 
                 </div>
             </div>
         </div>
@@ -161,7 +182,7 @@
                 </div>
             </div>
         </div>
-        <div id="reserve" class="row row-content">
+        <div id="reserveform" class="row row-content">
             <div class="col-xs-12 col-sm-3">
                 <p style="padding:20px;"></p>
                 <h3 align="center">Reserve a Table</h3>
@@ -248,5 +269,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
