--- a/Front-End Web UI Frameworks and Tools/Main/Week 3/index.html
+++ b/Front-End Web UI Frameworks and Tools/Main/Week 3/index.html
@@ -63,14 +63,14 @@
                     <h4 class="modal-title">Login </h4>
                 </div>
                 <div class="modal-body">
-                    <form class="form-inline" role="form">
+                    <form class="form-inline">
                         <div class="form-group">
                             <label class="sr-only" for="email">Email address</label>
-                            <input type="text" class="form-control" id="email" name="email" placeholder="Email">
+                            <input type="text" class="form-control input-sm" id="email" name="email" placeholder="Email">
                         </div>    
                         <div class="form-group">    
                             <label class="sr-only" for="password">Password</label>
-                            <input type="text" class="form-control" id="password" name="password" placeholder="Password">
+                            <input type="text" class="form-control input-sm" id="password" name="password" placeholder="Password">
                         </div>
                         <div class="checkbox">
                             <label for="remember">
