--- a/Front-End Web UI Frameworks and Tools/Homework 3/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 3/index.html
@@ -101,7 +101,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a type="button" class="btn btn-warning btn-block">Reserve Table</a> 
+                    <a type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reserveformModal">Reserve Table</a> 
                 </div>
             </div>
         </div>
