--- a/Front-End Web UI Frameworks and Tools/Homework 3/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 3/index.html
@@ -128,6 +128,19 @@
                             </div>
                         </div>
                         <div class="form-group" style="display:flex;">
+                            <label for="section" class="col-sm-2 control-label">Section</label>
+                            <div class="col-sm-10">
+                                <div class="btn-group" data-toggle="buttons">
+                                    <label for="" class="btn btn-success active">
+                                        <input type="radio" name="section" value="non-smoking">Non-smoking
+                                    </label>
+                                    <label for="" class="btn btn-danger">
+                                        <input class="btn" type="radio" name="section" value="smoking">Smoking
+                                    </label>
+                                </div>    
+                            </div>
+                        </div>
+                        <div class="form-group" style="display:flex;">
                             <label for="" class="col-sm-2 control-label">Date and Time</label> 
                             <div class="col-sm-4">
                                 <input id="date" class="form-control" name="date" placeholder="Date" type="text">
