--- a/Front-End Web UI Frameworks and Tools/Homework 3/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 3/index.html
@@ -115,7 +115,7 @@
                     <h4 align="modal-title">Reserve a Table</h4>
                 </div>
                 <div class="modal-body">
-                    <form class="fonm-horizontal" role="form">
+                    <form class="form-horizontal" role="form">
                         <div class="form-group" style="display:flex;">
                             <label for="guests" class="col-sm-2 control-label">Number of Guests</label>
                             <div class="col-sm-10">
@@ -131,10 +131,10 @@
                             <label for="section" class="col-sm-2 control-label">Section</label>
                             <div class="col-sm-10">
                                 <div class="btn-group" data-toggle="buttons">
-                                    <label for="" class="btn btn-success active">
+                                    <label class="btn btn-success active">
                                         <input type="radio" name="section" value="non-smoking">Non-smoking
                                     </label>
-                                    <label for="" class="btn btn-danger">
+                                    <label class="btn btn-danger">
                                         <input class="btn" type="radio" name="section" value="smoking">Smoking
                                     </label>
                                 </div>    
@@ -161,7 +161,7 @@
                             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
-                            <strong>Warning</strong>: Please <a href="+85212345678" class="alert-link">call</a> us to reserve for more than six guests.
+                            <strong>Warning</strong>: Please <a href="tel:+85212345678" class="alert-link">call</a> us to reserve for more than six guests.
                         </div>
                     </form> 
                 </div><!---- End .modal-body ------>    
@@ -300,7 +300,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!--- End .row.row-container ------>
     </div><!---- End .container ----->
 
     <footer class="row-footer">
@@ -340,11 +340,10 @@
                     <p style="padding:10px;"></p>
                     <p align=center>© Copyright 2015 Ristorante Con Fusion</p>
                 </div>
-            </div>
-        </div>
+            </div><!---- End .row ------>
+        </div><!----- End .container ------>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/script.js"></script>
 </body>
 </html>
