--- a/Front-End Web UI Frameworks and Tools/Main/Week 4/index.html
+++ b/Front-End Web UI Frameworks and Tools/Main/Week 4/index.html
@@ -222,7 +222,15 @@
                     <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
                         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
-                    </a>    
+                    </a>
+                    <div class="btn-group" id="carouselButtons">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                            <span class="fa fa-pause" aria-hidden="true"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                	        <span class="fa fa-play" aria-hidden="true"></span>
+                        </button>
+                    </div>    
                 </div><!--- End #mycarousel ---->
             </div><!---- End .col-xs-12 --->
         </div><!---- End .row ------>
@@ -345,5 +353,6 @@
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
