Выполнил task 1 домашней работы №4.

--- a/Front-End Web UI Frameworks and Tools/Homework 4/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 4/index.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap-social.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    
+    <link rel="stylesheet" href="css/style.css">    
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -47,7 +46,7 @@
                     <li><a href="contactus.html"><span class="fa-envelope-o"></span> Contact</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a data-toggle="modal" data-target="#loginModal">
+                    <li><a>
                     <span class="glyphicon glyphicon-log-in"></span> Login</a>
                     </li>
                 </ul>
@@ -101,7 +100,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a type="button" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reserveformModal">Reserve Table</a> 
+                    <a type="button" class="btn btn-warning btn-block">Reserve Table</a> 
                 </div>
             </div>
         </div>
