--- a/Front-End Web UI Frameworks and Tools/Homework 4/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 4/index.html
@@ -46,7 +46,7 @@
                     <li><a href="contactus.html"><span class="fa-envelope-o"></span> Contact</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a>
+                    <li><a href="#loginModal">
                     <span class="glyphicon glyphicon-log-in"></span> Login</a>
                     </li>
                 </ul>
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a type="button" class="btn btn-warning btn-block">Reserve Table</a> 
+                    <a href="#reserveformModal" type="button" class="btn btn-warning btn-block">Reserve Table</a> 
                 </div>
             </div>
         </div>
