Исправил id на кнопке Reserve Table.

--- a/Front-End Web UI Frameworks and Tools/Homework 4/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 4/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-2">
                     <p style="padding:40px;"></p>
-                    <a id="#reserveform" type="button" class="btn btn-warning btn-block">Reserve Table</a> 
+                    <a id="reserveform" type="button" class="btn btn-warning btn-block">Reserve Table</a> 
                 </div>
             </div>
         </div>
