--- a/Front-End Web UI Frameworks and Tools/Homework 2/index.html
+++ b/Front-End Web UI Frameworks and Tools/Homework 2/index.html
@@ -199,7 +199,7 @@
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
-                        <strong>Warning</strong>: Please <a href="+85212345678" class="alert-link">call</a> us to reserve for more than six guests.
+                        <strong>Warning</strong>: Please <a href="tel:+85212345678" class="alert-link">call</a> us to reserve for more than six guests.
                     </div>
                 </form>    
             </div>   
