--- a/Front-End JavaScript Frameworks: AngularJS/Homework 1/app/dishdetail.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Homework 1/app/dishdetail.html
@@ -39,7 +39,11 @@
                 </div>    
             </div>
             <div class="col-xs-9 col-xs-offset-1">
-                <p>Put the comments here</p>
+                <blockquote ng-repeat="comment in dishDC.dish.comments |  orderBy:dishDC.comments">
+                    <p>{{comment.rating}} Stars</p>
+                    <p>{{comment.comment}}</p>
+                    <footer>{{comment.author}}, {{comment.date | date:"MMM.dd.yyyy"}}</footer>
+                </blockquote>
             </div>
         </div><!--- End .row.row-content ---->
     </div><!----- End .container ----->
@@ -55,7 +59,7 @@
                           label:'Hot',
                           price:'4.99',
                           description:'A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.',
-                           comments: [
+                          comments: [
                                {
                                    rating:5,
                                    comment:"Imagine all the eatables, living in conFusion!",
