--- a/Front-End JavaScript Frameworks: AngularJS/Main/Week 2/Gulp/conFusion/app/menu.html
+++ b/Front-End JavaScript Frameworks: AngularJS/Main/Week 2/Gulp/conFusion/app/menu.html
@@ -68,7 +68,7 @@
         </div><!---- End .row.row-content ----->
     </div><!---- End .container ---->
     
-    <script src="../bower_components/angular/angular.js"></script>
+    <script src="../bower_components/angular/angular.min.js"></script>
     <script src="scripts/app.js"></script>
 </body>
 </html>
